--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://www.jarad.me/stat615
+production_url : http://www.jarad.me/courses/stat615
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
